--- a/text.html
+++ b/text.html
@@ -23,7 +23,6 @@
     h1 {
         color: turquoise;
         font-style: italic;
-        font-weight: 900;
         font-size: 45px;
         margin: 0;
     }
@@ -48,18 +47,18 @@
                 <hr />
                 <p class="text">No. </p>
             </div>
-            <p>Sertifikat diberikan kepada</p>
+            <p>Sertifikat diberikan kepada : </p>
             <div class="box">
                 <table>
                     <tr>
                         <td>Nama Wakif</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                     <tr>
                         <td class="padding">Alamatlamat</td>
                         <td class="padding">:</td>
-                        <td class="padding">________________________________</td>
+                        <td class="padding">__________________________________</td>
                     </tr>
                     <tr>
                         <td rowspan="2"> Atas Wakaf yang diberikan melalui</td>
@@ -72,12 +71,12 @@
                     <tr>
                         <td>Nominal Wakaf</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                     <tr>
                         <td class="padding">Jenis Wakaf</td>
                         <td class="padding">:</td>
-                        <td class="padding">________________________________</td>
+                        <td class="padding">__________________________________</td>
                     </tr>
                     <tr>
                         <td colspan="3" class="padding"><b>Kepada</b></td>
@@ -85,12 +84,12 @@
                     <tr>
                         <td>Nazhir</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                     <tr>
                         <td>Alamat Nazhir</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                 </table>
             </div>
