--- a/text2.html
+++ b/text2.html
@@ -1,10 +1,3 @@
-<?php
-require_once("dompdf/autoload.inc.php");
-
-use Dompdf\Dompdf;
-
-$dompdf = new Dompdf();
-$html =  '
 <html>
 
 <head>
@@ -158,11 +151,4 @@ $html =  '
     </div>
 </body>
 
-</html>';
-
-
-$dompdf->loadHtml($html);
-$dompdf->setPaper('A4', 'potrait');
-$dompdf->render();
-$dompdf->stream("laporan-akta.pdf");
-?>
+</html>
