--- a/sertifikat.html
+++ b/sertifikat.html
@@ -1,68 +1,69 @@
-<?php
-require_once("dompdf/autoload.inc.php");
-
-use Dompdf\Dompdf;
-
-$dompdf = new Dompdf();
-$html =  '
 <html>
 
 <head>
+    <style>
+        body {
+            background-color: white;
+        }
+
+        .header {
+            margin: 10px;
+            top: 10px;
+        }
+
+        .image {
+            width: 100%;
+            justify-content: center;
+        }
+
+        .text-center {
+            text-align: center;
+        }
+
+        .box {
+            margin: 30px;
+        }
+
+        h1 {
+            color: turquoise;
+            font-style: italic;
+            font-size: 45px;
+            margin: 0;
+        }
+
+        table tr td {
+            padding-bottom: 5px;
+        }
+
+        table tr td.padding {
+            padding-bottom: 10px;
+        }
+    </style>
 </head>
 
-<style>
-    body {
-        background-color: white;
-    }
-
-    .text-center {
-        text-align: center;
-    }
-
-    .box {
-        margin: 50px;
-    }
-
-    h1 {
-        color: turquoise;
-        font-style: italic;
-        font-weight: 900;
-        font-size: 45px;
-        margin: 0;
-    }
-
-    table tr td {
-        padding-bottom: 5px;
-    }
-
-    table tr td.padding {
-        padding-bottom: 20px;
-    }
-</style>
-
 <body>
+    <div class="header">
+        <img class="image" src="img/logo2.jpg" alt="">
+    </div>
     <div>
-        <div class="header">
-
-        </div>
         <div class="box">
             <div class="text-center header">
                 <h1 class="header">Sertifikat Wakaf</h1>
                 <hr />
                 <p class="text">No. </p>
             </div>
-            <p>Sertifikat diberikan kepada</p>
+            <p>Sertifikat diberikan kepada : </p>
             <div class="box">
                 <table>
                     <tr>
                         <td>Nama Wakif</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                     <tr>
-                        <td class="padding">Alamatlamat</td>
+                        <td class="padding">Alamat</td>
                         <td class="padding">:</td>
-                        <td class="padding">________________________________</td>
+                        <td class="padding">__________________________________</td>
                     </tr>
                     <tr>
                         <td rowspan="2"> Atas Wakaf yang diberikan melalui</td>
@@ -75,12 +76,12 @@ $html =  '
                     <tr>
                         <td>Nominal Wakaf</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                     <tr>
                         <td class="padding">Jenis Wakaf</td>
                         <td class="padding">:</td>
-                        <td class="padding">________________________________</td>
+                        <td class="padding">__________________________________</td>
                     </tr>
                     <tr>
                         <td colspan="3" class="padding"><b>Kepada</b></td>
@@ -88,19 +89,19 @@ $html =  '
                     <tr>
                         <td>Nazhir</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                     <tr>
                         <td>Alamat Nazhir</td>
                         <td>:</td>
-                        <td>________________________________</td>
+                        <td>__________________________________</td>
                     </tr>
                 </table>
             </div>
             <div class="box">
                 <div class="text-center">
                     <p style="margin-bottom: 75px;"> Diterbitkan di </p>
-                    <p style="margin-bottom: 50px;"> Jakarta,____ _______________ 2020</p>
+                    <p style="margin-bottom: 15px;"> Jakarta,____ _______________ 2020</p>
                     <p>Dokumen ini diterbitkan oleh Bank secara sistem,
                         oleh karenanya tidak memerlukan tanda tangan pejabat bank </p>
                 </div>
@@ -110,11 +111,4 @@ $html =  '
     </div>
 </body>
 
-</html>';
-
-
-$dompdf->loadHtml($html);
-$dompdf->setPaper('A4', 'potrait');
-$dompdf->render();
-$dompdf->stream("laporan-sertifikat.pdf");
-?>
+</html>
